# perspective-corrector

./: .gitignore  BUILD_WINDOWS.md  CHANGELOG.md  DEVELOPMENT_LOG.md  README.md  icon.icns  perspective_corrector.py  perspective_corrector.spec  pyproject.toml  requirements.txt
.github/workflows/: build-windows.yml  build.yml
