[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perspective-corrector"
version = "1.1.0"
description = "プレゼン写真の台形歪みを補正するデスクトップアプリケーション"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "mashi727"}
]
keywords = ["perspective", "correction", "image", "opencv", "pyside6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = [
    "PySide6>=6.0.0",
    "opencv-python>=4.0.0",
    "numpy>=1.20.0",
    "Pillow>=9.0.0",
    "pillow-heif>=0.10.0",
]

[project.scripts]
perspective-corrector = "perspective_corrector:main"

[project.urls]
Homepage = "https://github.com/mashi727/perspective-corrector"
Repository = "https://github.com/mashi727/perspective-corrector"

[tool.setuptools]
py-modules = ["perspective_corrector"]
